subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Typing_Invalid_10.while
int f(int|real x) {
    return x;
}